--- a/index.css
+++ b/index.css
@@ -22,6 +22,29 @@
     justify-content: space-around;
 }
 
+#turtleGame {
+    background-color: bisque;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.turtle {
+    display: flex;
+    width: 100px;
+    height: 50px;
+    border-radius: 50px;
+    border-color: black;
+    border-width: thin;
+    border-style: solid;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
 h3, #info {
     text-align: center;
 }
